# idemio

./: Cargo.toml  README.md
.github/workflows/: coverage.yml
examples/hyper_example/: Cargo.toml
examples/hyper_example/src/: main.rs
examples/lambda_example/: Cargo.toml
examples/lambda_example/src/: main.rs
idem-handler/: Cargo.toml  README.md
idem-handler-config/: Cargo.toml
idem-handler-config/src/: config_cache.rs  execution_flow_config.rs  lib.rs
idem-handler-error/: Cargo.toml
idem-handler-macro/: Cargo.toml
idem-handler-macro/src/: lib.rs
idem-handler/benches/: route_benchmarks.rs
idem-handler/examples/: README.md  hyper_example.rs  route_table_example.rs
idem-handler/src/: exchange.rs  executor.rs  factory.rs  handler.rs  lib.rs  router.rs  status.rs
idem-handler/src/config/: config.rs  config_cache.rs  execution_flow_config.rs  mod.rs
idem-handler/src/router/: mod.rs  route_table.rs
idemio/: Cargo.toml
idemio-macro/: Cargo.toml
idemio-macro/src/: lib.rs
idemio/benches/: route_benchmarks.rs
idemio/examples/: hyper_example.rs
idemio/examples/buffered/: main.rs
idemio/examples/file/: hyper_file_sample.rs  main.rs  sample.txt
idemio/examples/generic_streams/: main.rs
idemio/src/: exchange.rs  lib.rs  status.rs
idemio/src/cache/: file.rs  mod.rs
idemio/src/config/: config.rs  config_cache.rs  mod.rs
idemio/src/exchange/: buffered.rs  collector.rs  mod.rs  streaming.rs  unified.rs
idemio/src/handler/: config.rs  mod.rs  registry.rs
idemio/src/logger/: mod.rs
idemio/src/router/: config.rs  exchange.rs  executor.rs  factory.rs  mod.rs  path.rs  route.rs
idemio/src/router/path/: http.rs  mod.rs
idemio/src/router/path/http/: mod.rs
