[package]
name = "idem-handler-config"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = [" Kalev Gonvick kalev.gonvick@idemio.dev"]
description = "Common configuration options for idem-handlers."

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
dashmap = "7.0.0-rc2"
once_cell = "1.21.1"
