[package]
name = "idem-handler"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Common handler mechanism used in other idemio products."
authors = [" Kalev Gonvick kalev.gonvick@idemio.dev"]

[profile.release]
strip = "symbols"
opt-level = 3

[dependencies]
idem-handler-config = {path = "../idem-handler-config" }
async-trait = "0.1.88"
fnv = "1.0.7"

[dev-dependencies]
tokio = { version = "1.44.1" , features = ["macros", "rt"]}
