[package]
name = "idem-handler"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Common handler mechanism used in other idemio products."
authors = [" Kalev Gonvick kalev.gonvick@idemio.dev"]

[profile.release]
strip = "symbols"
opt-level = 3

[dependencies]
async-trait = "0.1.88"
fnv = "1.0.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dashmap = { version = "7.0.0-rc2", features = ["serde"] }
once_cell = "1.21.3"
tokio = { version = "1.45.1" , features = ["macros", "rt", "time"] }
log = "0.4.27"
uuid = { version = "1.17.0", features = ["v4"] }

[[bench]]
name = "route_benchmarks"
harness = false

[dev-dependencies]
tokio = { version = "1.45.1" , features = ["macros", "rt", "rt-multi-thread"]}
criterion = "0.6.0"
hyper = { version = "0.14", features = ["full"] }
chrono = "0.4"

[[example]]
name = "hyper_example"
path = "examples/hyper_example.rs"
