[package]
name = "idemio"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Core framework for idemio products"
authors = [" Kalev Gonvick kalev.gonvick@idemio.dev"]

[features]
hyper = ["dep:hyper", "dep:http-body-util"]

[profile.release]
strip = "symbols"
opt-level = 3

[dependencies]
async-trait = "0.1.88"
fnv = "1.0.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dashmap = { version = "7.0.0-rc2", features = ["serde"] }
once_cell = "1.21.3"
tokio = { version = "1.45.1", features = ["macros", "rt", "time"] }
log = "0.4.27"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
hyper = { version = "1.6.0", features = ["full"], optional = true }
http-body-util = { version = "0.1.3" , optional = true}
chrono = "0.4.41"
futures-util = { version = "0.3.31" }
env_logger = "0.11.8"


[dev-dependencies]
tokio = { version = "1.45.1" , features = ["macros", "rt", "rt-multi-thread", "fs"]}
tokio-util = "0.7.15"
criterion = "0.6.0"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.14" , features = ["tokio"]}
http-body-util = "0.1.3"

[[bench]]
name = "route_benchmarks"
harness = false

[[example]]
name = "buffered_hyper_example"
path = "examples/buffered/main.rs"
required-features = ["hyper"]

[[example]]
name = "file_hyper_example"
path = "examples/file/main.rs"
required-features = ["hyper"]


[[example]]
name = "generic_streams_example"
path = "examples/generic_streams/main.rs"
required-features = ["hyper"]