[package]
name = "idemio"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Core framework for idemio products"
authors = [" Kalev Gonvick kalev.gonvick@idemio.dev"]

[features]
hyper = ["dep:hyper", "dep:http-body-util"]

[profile.release]
strip = "symbols"
opt-level = 3

[dependencies]
async-trait = "0.1.88"
fnv = "1.0.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dashmap = { version = "7.0.0-rc2", features = ["serde"] }
once_cell = "1.21.3"
tokio = { version = "1.45.1", features = ["macros", "rt", "time"] }
log = "0.4.27"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
hyper = { version = "1.6.0", features = ["full"], optional = true }
http-body-util = { version = "0.1.3" , optional = true}
chrono = "0.4.41"
futures-util = { version = "0.3.31" }
thiserror = "2.0.14"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "route_benchmarks"
harness = false