[package]
name = "hyper_example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
idemio = {path = "../../idemio", features = ["hyper"]}
hyper = { version = "1.7.0", features = ["full"] }
http-body-util = "0.1.3"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
hyper-util = { version = "0.1.17" , features = ["full"]}
tokio = { version = "1.48.0" , features = ["full"]}